tests/parser/call-expression-argument-error.stderr
error: expected expression
 --> $DIR/call-expression-argument-error.lox:1:3
  |
1 | f(/);
  |   ^
